# qtlanguageserver

./: .gitignore  .qmake.conf  CMakeLists.txt  conanfile.py  dependencies.yaml  qtlanguageserver.pro  sync.profile
coin/axivion/: ci_config_linux.json
src/: CMakeLists.txt  qtlanguageserver.qdoc
src/jsonrpc/: CMakeLists.txt  qhttpmessagestreamparser.cpp  qhttpmessagestreamparser_p.h  qjsonrpcprotocol.cpp  qjsonrpcprotocol_p.h  qjsonrpcprotocol_p_p.h  qjsonrpctransport_p.h  qjsontypedrpc.cpp  qjsontypedrpc_p.h  qtjsonrpcglobal.h  qtypedjson.cpp  qtypedjson_p.h
src/jsonrpc/doc/: qtjsonrpc.qdocconf
src/languageserver/: CMakeLists.txt  generate.ts  qlanguageserverbase.cpp  qlanguageserverbase_p.h  qlanguageserverbase_p_p.h  qlanguageservergen.cpp  qlanguageservergen_p.h  qlanguageservergen_p_p.h  qlanguageserverjsonrpctransport.cpp  qlanguageserverjsonrpctransport_p.h  qlanguageserverprespectypes_p.h  qlanguageserverprotocol.cpp  qlanguageserverprotocol_p.h  qlanguageserverspec_p.h  qlanguageserverspectypes_p.h  qlspnotifysignals.cpp  qlspnotifysignals_p.h  qtlanguageserverglobal.h
tests/auto/: CMakeLists.txt
tests/auto/cmake/: CMakeLists.txt
tests/auto/cmake/test_qtjsonrpc_module/: CMakeLists.txt  main.cpp
tests/auto/qjsonrpcprotocol/: CMakeLists.txt  tst_qjsonrpcprotocol.cpp
tests/auto/qlanguageserver/: CMakeLists.txt  qiopipe.cpp  qiopipe.h  tst_qlanguageserver.cpp
tests/auto/typedjson/: CMakeLists.txt  tst_typedjson.cpp  tst_typedjson.h
